// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDetails Screen Renders correctly 1`] = `
<BVLinearGradient
  colors={
    Array [
      4278209869,
      4278214495,
      4279897917,
    ]
  }
  endPoint={
    Object {
      "x": 1.28,
      "y": 0.7,
    }
  }
  locations={
    Array [
      0,
      0.5,
      1,
    ]
  }
  startPoint={
    Object {
      "x": -0.28,
      "y": 0.3,
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 16,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "color": "#42803E",
                "fontSize": 90,
                "lineHeight": 90,
              },
            ]
          }
        >
          B
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "flexShrink": 1,
                "marginLeft": 20,
              },
            ]
          }
        >
          BestBC College
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "marginTop": 16,
            },
          ]
        }
      >
        ContactDetails.DateOfConnection
      </Text>
      <View
        style={
          Object {
            "marginTop": 24,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#1A7A7A",
              "borderRadius": 12,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginVertical": 4,
              "maxWidth": 400,
              "opacity": 1,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "width": "85%",
            }
          }
          testID="com.ariesbifold:id/RenameContact"
        >
          <
            color="white"
            height={20}
            width={20}
          />
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "marginLeft": 8,
                },
              ]
            }
          >
            Screens.RenameContact
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#FF3B30",
              "borderRadius": 12,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginVertical": 4,
              "maxWidth": 400,
              "opacity": 1,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "width": "85%",
            }
          }
          testID="com.ariesbifold:id/RemoveFromWallet"
        >
          <
            color="white"
            height={20}
            width={20}
          />
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "marginLeft": 8,
                },
              ]
            }
          >
            ContactDetails.RemoveContact
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</BVLinearGradient>
`;

exports[`ContactDetails Screen Renders correctly with alt contact name 1`] = `
<BVLinearGradient
  colors={
    Array [
      4278209869,
      4278214495,
      4279897917,
    ]
  }
  endPoint={
    Object {
      "x": 1.28,
      "y": 0.7,
    }
  }
  locations={
    Array [
      0,
      0.5,
      1,
    ]
  }
  startPoint={
    Object {
      "x": -0.28,
      "y": 0.3,
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 16,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "color": "#42803E",
                "fontSize": 90,
                "lineHeight": 90,
              },
            ]
          }
        >
          A
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "flexShrink": 1,
                "marginLeft": 20,
              },
            ]
          }
        >
          Alt Name
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "marginTop": 16,
            },
          ]
        }
      >
        ContactDetails.DateOfConnection
      </Text>
      <View
        style={
          Object {
            "marginTop": 24,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#1A7A7A",
              "borderRadius": 12,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginVertical": 4,
              "maxWidth": 400,
              "opacity": 1,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "width": "85%",
            }
          }
          testID="com.ariesbifold:id/RenameContact"
        >
          <
            color="white"
            height={20}
            width={20}
          />
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "marginLeft": 8,
                },
              ]
            }
          >
            Screens.RenameContact
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            Object {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#FF3B30",
              "borderRadius": 12,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginVertical": 4,
              "maxWidth": 400,
              "opacity": 1,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "width": "85%",
            }
          }
          testID="com.ariesbifold:id/RemoveFromWallet"
        >
          <
            color="white"
            height={20}
            width={20}
          />
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "marginLeft": 8,
                },
              ]
            }
          >
            ContactDetails.RemoveContact
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</BVLinearGradient>
`;
